--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,9 @@
-%{eunit_opts, [verbose]}.
+{eunit_opts, [verbose]}.
 {erl_opts, [debug_info]}.
 {deps, [
         {lhttpc, ".*", {git, "git://github.com/ferd/lhttpc.git", "master"}},
         {jiffy, "", {git, "https://github.com/davisp/jiffy.git", "master"}},
         {edatetime, "", {git, "https://github.com/knutin/edatetime.git", "master"}},
-        {erlsha2, "", {git, "https://github.com/vinoski/erlsha2.git", "master"}}
+        {erlsha2, "", {git, "https://github.com/vinoski/erlsha2.git", "master"}},
+        {meck, "", {git, "git://github.com/eproxus/meck.git", {branch, "master"}}}
        ]}.
