--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,10 @@
 {eunit_opts, [verbose]}.
 {erl_opts, [debug_info]}.
 {deps, [
-        {lhttpc, ".*", {git, "git://github.com/ferd/lhttpc.git", "master"}},
-        {jiffy, "", {git, "https://github.com/davisp/jiffy.git", "master"}},
-        {edatetime, "", {git, "https://github.com/knutin/edatetime.git", "master"}},
-        {erlsha2, "", {git, "https://github.com/vinoski/erlsha2.git", "master"}},
+        {lhttpc, ".*", {git, "git://github.com/ferd/lhttpc.git", {branch, "master"}}},
+        {party, ".*", {git, "git@github.com:knutin/party.git", {branch, "master"}}},
+        {jiffy, "", {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
+        {edatetime, "", {git, "https://github.com/knutin/edatetime.git", {branch, "master"}}},
+        {erlsha2, "", {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
         {meck, "", {git, "git://github.com/eproxus/meck.git", {branch, "master"}}}
        ]}.
