--- a/rebar.config
+++ b/rebar.config
@@ -1,8 +1,7 @@
 {eunit_opts, [verbose]}.
 {erl_opts, [debug_info]}.
 {deps, [
-        {lhttpc, ".*", {git, "git://github.com/ferd/lhttpc.git", {branch, "master"}}},
-        {party, ".*", {git, "git@github.com:knutin/party.git", {branch, "master"}}},
+        {party, ".*", {git, "git://github.com/knutin/party.git", {branch, "master"}}},
         {jiffy, "", {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
         {edatetime, "", {git, "https://github.com/knutin/edatetime.git", {branch, "master"}}},
         {erlsha2, "", {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
