Use DynamoDB Local for tests

--- a/rebar.config
+++ b/rebar.config
@@ -7,3 +7,26 @@
         {erlsha2, "", {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
         {meck, "", {git, "git://github.com/eproxus/meck.git", {branch, "master"}}}
        ]}.
+
+{pre_hooks, [
+    {'get-deps', "
+        echo '==> local dynamo (pre_hook)'
+        mkdir -p dynamodb_local
+        wget -nc http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.zip -O dynamodb_local/dynamodb_local_latest.zip
+        unzip -n dynamodb_local/dynamodb_local_latest.zip -d dynamodb_local
+        echo '==> local dynamo (pre_hook) [done]'
+    "},
+    {eunit, "
+        pkill -9 -f DynamoDBLocal
+        screen -dm -S dynamodb_local java -Djava.library.path=./dynamodb_local/DynamoDBLocal_lib -jar dynamodb_local/DynamoDBLocal.jar -inMemory
+        sleep 1
+        echo '==> local dynamo (started)'
+    "}
+]}.
+
+{post_hooks, [
+    {eunit, "
+        pkill -f DynamoDBLocal
+        echo '==> local dynamo (stopped)'
+    "}
+]}.
