Fix rebar hooks for DDB

--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,6 @@
 {eunit_opts, [verbose]}.
 {erl_opts, [debug_info]}.
+
 {deps, [
         {party, ".*", {git, "git://github.com/knutin/party.git", {branch, "master"}}},
         {jiffy, "", {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
@@ -9,24 +10,10 @@
        ]}.
 
 {pre_hooks, [
-    {'get-deps', "
-        echo '==> local dynamo (pre_hook)'
-        mkdir -p dynamodb_local
-        wget -nc http://dynamodb-local.s3-website-us-west-2.amazonaws.com/dynamodb_local_latest.zip -O dynamodb_local/dynamodb_local_latest.zip
-        unzip -n dynamodb_local/dynamodb_local_latest.zip -d dynamodb_local
-        echo '==> local dynamo (pre_hook) [done]'
-    "},
-    {eunit, "
-        pkill -9 -f DynamoDBLocal
-        screen -dm -S dynamodb_local java -Djava.library.path=./dynamodb_local/DynamoDBLocal_lib -jar dynamodb_local/DynamoDBLocal.jar -inMemory
-        sleep 1
-        echo '==> local dynamo (started)'
-    "}
+    {'get-deps', "./bin/setup_dynamodb.sh"},
+    {eunit, "./bin/start_dynamodb.sh"}
 ]}.
 
 {post_hooks, [
-    {eunit, "
-        pkill -f DynamoDBLocal
-        echo '==> local dynamo (stopped)'
-    "}
+    {eunit, "./bin/stop_dynamodb.sh"}
 ]}.
