--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ otp_release:
     - R16B02
 before_install:
  - sudo apt-get install -qq screen default-jre
-script: "./rebar compile && ./rebar xref skip_deps=true && ./rebar eunit skip_deps=true"
+script: "./rebar compile && ./rebar eunit skip_deps=true"
