--- a/rebar.config
+++ b/rebar.config
@@ -2,7 +2,7 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
-        {party, ".*", {git, "git://github.com/knutin/party.git", {branch, "master"}}},
+        {party, ".*", {git, "git://github.com/GameAnalytics/party.git", {branch, "master"}}},
         {jiffy, "", {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
         {edatetime, "", {git, "https://github.com/knutin/edatetime.git", {branch, "master"}}},
         {erlsha2, "", {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
