--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {deps, [
         {party, ".*", {git, "git://github.com/GameAnalytics/party.git", {branch, "master"}}},
         {jiffy, "", {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
-        {edatetime, "", {git, "https://github.com/knutin/edatetime.git", {branch, "master"}}},
+        {edatetime, "", {git, "https://github.com/GameAnalytics/edatetime.git", {branch, "master"}}},
         {erlsha2, "", {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
         {meck, "", {git, "git://github.com/eproxus/meck.git", {branch, "master"}}}
        ]}.
