Add lhttpc as an alternative HTTP client

--- a/rebar.config
+++ b/rebar.config
@@ -2,11 +2,18 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
-        {party, ".*", {git, "git://github.com/GameAnalytics/party.git", {branch, "master"}}},
-        {jiffy, "", {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
-        {edatetime, "", {git, "https://github.com/GameAnalytics/edatetime.git", {branch, "master"}}},
-        {erlsha2, "", {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
-        {meck, "", {git, "git://github.com/eproxus/meck.git", {branch, "master"}}}
+        {party, ".*",
+           {git, "git://github.com/GameAnalytics/party.git", {branch, "master"}}},
+        {lhttpc, "",
+           {git, "https://github.com/ferd/lhttpc.git", {branch, "master"}}},
+        {jiffy, "",
+           {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
+        {edatetime, "",
+           {git, "https://github.com/GameAnalytics/edatetime.git", {branch, "master"}}},
+        {erlsha2, "",
+           {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
+        {meck, "",
+           {git, "git://github.com/eproxus/meck.git", {branch, "master"}}}
        ]}.
 
 {pre_hooks, [
