--- a/rebar.config
+++ b/rebar.config
@@ -3,9 +3,10 @@
 
 {deps, [
         {party, ".*",
-           {git, "git://github.com/GameAnalytics/party.git", {branch, "master"}}},
+           {git, "https://github.com/GameAnalytics/party.git", {branch, "master"}}},
         {lhttpc, "",
            {git, "https://github.com/ferd/lhttpc.git", {branch, "master"}}},
+
         {jiffy, "",
            {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
         {edatetime, "",
@@ -13,7 +14,7 @@
         {erlsha2, "",
            {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
         {meck, "",
-           {git, "git://github.com/eproxus/meck.git", {branch, "master"}}}
+           {git, "https://github.com/eproxus/meck.git", {branch, "master"}}}
        ]}.
 
 {pre_hooks, [
