GAME-4308 Return correct error tuple when max retries is reached in apply_backpressure
* instead of a 3 element tuple return a expected 2 element tuple with nested error reason
* updating travis config
* correcting test cases
* adding in a new test case for regression testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: erlang
-otp_release:
-    - R16B02
 sudo: false
+branches:
+  only:
+      - master
+      - /^game-\d+$/
+notifications:
+     email:
+         - backend@gameanalytics.com
+otp_release:
+    - 19.1
+    - R16B03
 addons:
   apt:
     packages:
