--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,5 @@
+%% -*- erlang -*- vim:se ft=erlang:
+
 {eunit_opts, [verbose]}.
 {erl_opts, [debug_info]}.
 
@@ -6,13 +8,12 @@
            {git, "https://github.com/GameAnalytics/party.git", {branch, "master"}}},
         {lhttpc, "",
            {git, "https://github.com/ferd/lhttpc.git", {branch, "master"}}},
-
         {jiffy, "",
            {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
         {edatetime, "",
-           {git, "https://github.com/GameAnalytics/edatetime.git", {branch, "master"}}},
-        {erlsha2, "",
-           {git, "https://github.com/vinoski/erlsha2.git", {branch, "master"}}},
+         {git, "https://github.com/GameAnalytics/edatetime.git", {branch, "master"}}},
+        {base16,  "",
+         {git, "https://github.com/goj/base16.git", {tag, "1.0.0"}}},
         {meck, "",
            {git, "https://github.com/eproxus/meck.git", {branch, "master"}}}
        ]}.
