Improving dependencies, build tool etc..
* Leveraging Andras Horvaths work in other GA repos
* adding base16 as application dependency

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 priv/aws_credentials.term
 .eunit
 *~
-deps
-ebin
 test/aws4_testsuite
 *.beam
 dynamodb_local
@@ -11,3 +9,6 @@ dynamodb_local
 dynamodb.pid
 dynamodb.out
 dynamodb.err
+
+_build/
+rebar.lock
