--- a/rebar.config
+++ b/rebar.config
@@ -1,28 +1,44 @@
 %% -*- erlang -*- vim:se ft=erlang:
 
-{eunit_opts, [verbose]}.
-{erl_opts, [debug_info]}.
+{erl_opts, [debug_info,
+            warnings_as_errors
+           ]}.
 
-{deps, [
-        {party, ".*",
-           {git, "https://github.com/GameAnalytics/party.git", {branch, "master"}}},
-        {lhttpc, "",
-           {git, "https://github.com/ferd/lhttpc.git", {branch, "master"}}},
-        {jiffy, "",
-           {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
-        {edatetime, "",
-         {git, "https://github.com/GameAnalytics/edatetime.git", {branch, "master"}}},
-        {base16,  "",
-         {git, "https://github.com/goj/base16.git", {tag, "1.0.0"}}},
-        {meck, "",
-           {git, "https://github.com/eproxus/meck.git", {branch, "master"}}}
-       ]}.
+{eunit_opts,
+ [verbose,
+  no_tty,
+  {report, {eunit_progress, [colored]}}
+ ]
+}.
 
-{pre_hooks, [
-    {'get-deps', "./bin/setup_dynamodb.sh"},
-    {eunit, "./bin/start_dynamodb.sh"}
-]}.
+{deps,
+ [
+  {party,     {git, "git@github.com:GameAnalytics/party.git",     {tag, "0.1.0"}}},
+  {lhttpc,    {git, "git@github.com:GameAnalytics/lhttpc.git",    {tag, "1.2.9"}}},
+  {jiffy,     {git, "git@github.com:GameAnalytics/jiffy.git",     {tag, "0.14.11"}}},
+  {edatetime, {git, "git@github.com:GameAnalytics/edatetime.git", {tag, "1.0.1"}}},
+  {base16,    {git, "git@github.com:GameAnalytics/base16.git",    {tag, "1.0.0"}}}
+ ]}.
 
-{post_hooks, [
-    {eunit, "./bin/stop_dynamodb.sh"}
-]}.
+
+{profiles,
+ [
+  {test,
+   [
+    {deps,
+     [
+      {meck, {git, "git@github.com:GameAnalytics/meck.git", {ref, "69664df5d0"}}}
+     ]}
+   ]}
+  ]}.
+
+{pre_hooks,
+ [
+  {'get-deps', "./bin/setup_dynamodb.sh"},
+  {eunit, "./bin/start_dynamodb.sh"}
+ ]}.
+
+{post_hooks,
+ [
+  {eunit, "./bin/stop_dynamodb.sh"}
+ ]}.
