Making Rebar3 and Travis play ball
* Switching from SSH to HTTPS for deps to make travis-ci.org happy.
* Using eproxus repo since it's a test dependency
* Merging setup/start scripts for ddb local since Rebar3 doesn't have get-deps hook.
* Defining what xref checks to perform
* The previous sleep 1 isn't enough for travis. Trying to check if end point is up before continuing, awful with jars!

--- a/rebar.config
+++ b/rebar.config
@@ -13,11 +13,11 @@
 
 {deps,
  [
-  {party,     {git, "git@github.com:GameAnalytics/party.git",     {tag, "0.1.0"}}},
-  {lhttpc,    {git, "git@github.com:GameAnalytics/lhttpc.git",    {tag, "1.2.9"}}},
-  {jiffy,     {git, "git@github.com:GameAnalytics/jiffy.git",     {tag, "0.14.11"}}},
-  {edatetime, {git, "git@github.com:GameAnalytics/edatetime.git", {tag, "1.0.1"}}},
-  {base16,    {git, "git@github.com:GameAnalytics/base16.git",    {tag, "1.0.0"}}}
+  {party,     {git, "https://github.com/GameAnalytics/party.git",     {tag, "0.1.0"}}},
+  {lhttpc,    {git, "https://github.com/GameAnalytics/lhttpc.git",    {tag, "1.2.9"}}},
+  {jiffy,     {git, "https://github.com/GameAnalytics/jiffy.git",     {tag, "0.14.11"}}},
+  {edatetime, {git, "https://github.com/GameAnalytics/edatetime.git", {tag, "1.0.1"}}},
+  {base16,    {git, "https://github.com/GameAnalytics/base16.git",    {tag, "1.0.0"}}}
  ]}.
 
 
@@ -27,14 +27,13 @@
    [
     {deps,
      [
-      {meck, {git, "git@github.com:GameAnalytics/meck.git", {ref, "69664df5d0"}}}
+      {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.6"}}}
      ]}
    ]}
   ]}.
 
 {pre_hooks,
  [
-  {'get-deps', "./bin/setup_dynamodb.sh"},
   {eunit, "./bin/start_dynamodb.sh"}
  ]}.
 
@@ -42,3 +41,12 @@
  [
   {eunit, "./bin/stop_dynamodb.sh"}
  ]}.
+
+{xref_checks,
+ [
+  undefined_function_calls,
+  undefined_functions,
+  locals_not_used,
+  deprecated_function_calls,
+  deprecated_functions]
+}.
