Use alert_logic/lhttpc.

--- a/rebar.config
+++ b/rebar.config
@@ -14,7 +14,7 @@
 {deps,
  [
   {party,     {git, "https://github.com/GameAnalytics/party.git",     {tag, "0.1.0"}}},
-  {lhttpc,    {git, "https://github.com/GameAnalytics/lhttpc.git",    {tag, "1.2.9"}}},
+  {lhttpc,    {git, "https://github.com/GameAnalytics/lhttpc.git",    {tag, "alertlogic_1.3.1"}}},
   {jiffy,     {git, "https://github.com/GameAnalytics/jiffy.git",     {tag, "0.14.11"}}},
   {edatetime, {git, "https://github.com/GameAnalytics/edatetime.git", {tag, "1.0.1"}}},
   {base16,    {git, "https://github.com/GameAnalytics/base16.git",    {tag, "1.0.0"}}}
