--- a/rebar.config
+++ b/rebar.config
@@ -14,9 +14,9 @@
 {deps,
  [
   {lhttpc,    {git, "https://github.com/GameAnalytics/lhttpc.git",    {tag, "1.2.9"}}},
-  {jiffy,     {git, "https://github.com/GameAnalytics/jiffy.git",     {tag, "0.14.11"}}},
+  {jiffy, "0.14.11"},
   {edatetime, {git, "https://github.com/GameAnalytics/edatetime.git", {tag, "1.0.1"}}},
-  {base16,    {git, "https://github.com/GameAnalytics/base16.git",    {tag, "1.0.0"}}}
+  {base16,  "1.0.0"}
  ]}.
 
 
