--- a/rebar.config
+++ b/rebar.config
@@ -13,10 +13,9 @@
 
 {deps,
  [
-  {lhttpc,    {git, "https://github.com/GameAnalytics/lhttpc.git",    {tag, "1.2.9"}}},
   {jiffy, "0.14.11"},
-  {edatetime, {git, "https://github.com/GameAnalytics/edatetime.git", {tag, "1.0.1"}}},
-  {base16,  "1.0.0"}
+  {base16,  "1.0.0"},
+  {edatetime, {git, "https://github.com/GameAnalytics/edatetime.git", {tag, "1.0.1"}}}
  ]}.
 
 
