--- a/rebar.config
+++ b/rebar.config
@@ -13,11 +13,9 @@
 
 {deps,
  [
-  {party,     {git, "https://github.com/GameAnalytics/party.git",     {tag, "0.1.0"}}},
-  {lhttpc,    {git, "https://github.com/GameAnalytics/lhttpc.git",    {tag, "1.2.9"}}},
-  {jiffy,     {git, "https://github.com/GameAnalytics/jiffy.git",     {tag, "0.14.11"}}},
-  {edatetime, {git, "https://github.com/GameAnalytics/edatetime.git", {tag, "1.0.1"}}},
-  {base16,    {git, "https://github.com/GameAnalytics/base16.git",    {tag, "1.0.0"}}}
+  {jiffy, "0.14.11"},
+  {base16,  "1.0.0"},
+  {edatetime, {git, "https://github.com/GameAnalytics/edatetime.git", {tag, "1.0.1"}}}
  ]}.
 
 
@@ -27,7 +25,7 @@
    [
     {deps,
      [
-      {meck, {git, "https://github.com/eproxus/meck.git", {tag, "0.8.6"}}}
+      {meck, "0.8.13"}
      ]}
    ]}
   ]}.
