--- a/rebar.config
+++ b/rebar.config
@@ -13,6 +13,7 @@
 
 {deps,
  [
+  hackney,
   {jiffy, "0.14.11"},
   {base16,  "1.0.0"},
   {edatetime, {git, "https://github.com/GameAnalytics/edatetime.git", {tag, "1.0.1"}}}
